fix popup overflow issues. Closes #243

--- a/app/assets/stylesheets/application.css.less
+++ b/app/assets/stylesheets/application.css.less
@@ -19,6 +19,11 @@
 @line-height-base: 1.3846153846;
 @icon-font-path: "/assets/bootstrap/";
 
+// tab popup fix
+.tab-content {
+  overflow: initial !important;
+}
+
 // Disable responsiveness
 .container {
     max-width: none !important;
